All the components and everything works perfectly both on PC and mobile. Time to deploy the backend and frontend

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=5000
+PORT='5000'
+VITE_EMAILJS_SERVICE_ID='service_j6uj3ao'
+VITE_EMAILJS_TEMPLATE_ID='template_cr7yrp5'
+VITE_EMAILJS_USER_ID='cFqKGayUboSzDamIu'
