--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT='5000'
 VITE_EMAILJS_SERVICE_ID='service_j6uj3ao'
 VITE_EMAILJS_TEMPLATE_ID='template_cr7yrp5'
 VITE_EMAILJS_USER_ID='cFqKGayUboSzDamIu'
+VITE_API_BASE_URL='https://my-portfolio-v2-v9w0.onrender.com'
